<resources>
    <string name="app_name">FYP</string>
    <string name="WHC">WHC logo</string>
    <string name="loginDesc1">Hello,</string>
    <string name="loginDesc2">Welcome to Goal Tracking</string>
    <string name="loginButton">Login</string>
    <string name="forgotPasswordButton">Forgot Password?</string>
    <string name="CreateAccountButton">Do not have an account? Create here</string>
    <string name="choose_senior">Senior</string>
    <string name="choose_org">Organisation</string>
    <string name="promptUser">Choose to Register as</string>
    <string name="senior_register_string">Register an Account</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="dob">Date of Birth</string>
    <string name="seniorPhoneNo">Phone Number</string>
    <string name="Address">Address</string>
    <string name="returnPrev">Return to previous page</string>
    <string name="seniorRegisterButton">Register</string>
    <string name="org_register_string">Register Organisation</string>
    <string name="org_name">Organisation Name</string>
    <string name="email_address">Email Address</string>
    <string name="orgLogin_password">Password</string>
    <string name="orgPhoneNo">Phone Number</string>
    <string name="inCharge">Person-In-Charge</string>
    <string name="orgAddress">Address</string>
    <string name="orgRegisterButton">Register</string>
    <string name="logout">Logout Button</string>
    <string name="profilePicture">Profile Picture of User</string>
    <string name="userName">User Name</string>
    <string name="medalLogo">Medal Button</string>
    <string name="view_medal_string">View Medals</string>
    <string name="categories">Category Button</string>
    <string name="setGoals">Set Goals Button</string>
    <string name="monitorGoals">Monitor Goals Button</string>
    <string name="svcOrg">Service Organisation Button</string>
    <string name="rewards">Rewards Button</string>
    <string name="Help">Help Button</string>
    <string name="home_button">Home Button</string>
    <string name="friend_button">Friends Button</string>
    <string name="add_friend_button">Add Friends Button</string>
    <string name="profile_button">Profile Button</string>
    <string name="home_string">Home</string>
    <string name="friend_string">Friend</string>
    <string name="add_friend_string">Add Friends</string>
    <string name="profile_string">Profile</string>
    <string name="profileAddButton">Add Profile Button</string>
    <string name="addProfilePic"></string>
    <string name="imageIcon">Exercise Image</string>
    <string name="chooseGoal_string">Choose Your Goal</string>
    <string name="step_1">STEP 1</string>
    <string name="description_string">Description</string>
    <string name="dropDownBox">Drop Down Box</string>
    <string name="nextButton">Next!</string>
    <string name="fitness_desc">Fitness! keep healthy or you noob</string>
    <string name="health_desc">Health! stay healthy or die noob</string>
    <string name="finance_desc">Finance! Save money to make big bux and spend them all on useless stuff haha noob</string>
    <string-array name="GoalType">
        <item>Fitness</item>
        <item>Health</item>
        <item>Finance</item>
    </string-array>
    <string name="setYourGoals">Set Your Goals</string>
    <string name="goal">Goal Name</string>
    <string-array name="SetGoalCategory">
        <item>Lose Weight</item>
        <item>Walking</item>
        <item>Running</item>
    </string-array>
    <string name="goal_desc">Goal Description</string>
    <string name="inputWeight">Weight Input</string>
    <string name="createGoalButton">Create Goal!</string>
    <string name="box_for_display">box.</string>
    <string name="goal_string">Goals</string>
    <string name="add_button">Click to add new goals</string>
    <string name="goal_count">x Goals</string>
    <string name="notCompleted_count">0</string>
    <string name="completed_count">0</string>
    <string name="chosenGoalDesc">Description</string>
    <string name="chosenDateStart">Date Started:</string>
    <string name="progression_string">Progression:</string>
    <string name="progression_string2">Ongoing</string>
    <string name="deletegoal_button">Delete Goal</string>
    <string name="finishgoal_button">Goal Completed</string>
    <string name="admin_page_string">Admin Page</string>
    <string name="admin_name">Admin Name</string>
    <string name="editGoalCat">Goal Category Button</string>
    <string name="ViewUsers">View Users Goal Button</string>
    <string name="ManageAdmin">Manage Admins Button</string>
    <string name="ApproveOrgs">Approve Organisations Button</string>
    <string name="manage_admin_page_string">Admin Page</string>
    <string name="adminIcon">Admin icon</string>
    <string name="CreateAdminButton">Create Admin</string>
    <string name="UpdateAdminButton">Update Admin</string>
    <string name="DeleteAdmin">Delete Admin</string>
    <string name="delete_admin_page_string">Delete Admin</string>
    <string name="adminDeleteUsername">Username</string>
    <string name="adminDeleteAdminButton">Delete</string>
    <string name="confirm_delete_admin_page_string">Confirm Delete</string>
    <string name="adminConfirmDeleteAdminButton">ConfirmDelete</string>
    <string name="create_admin_page_string">Create Admin</string>
    <string name="adminUserInput">Username</string>
    <string name="adminPasswordInput">Password</string>
    <string name="adminNameInput">Full Name</string>
    <string name="adminDOB">Date of Birth</string>
    <string name="adminPhoneInput">Phone Number</string>
    <string name="adminCreateUserButton">Create</string>
    <string name="update_admin_page_string">Update Admin</string>
    <string name="adminUpdateUsername">Username</string>
    <string name="adminUpdatePassword">Password</string>
    <string name="adminUpdateFullName">Full Name</string>
    <string name="adminUpdateDOB">Date Of Birth</string>
    <string name="adminUpdatePhoneNo">Phone Number</string>
    <string name="adminUpdateUserButton">Update</string>
    <string name="category_page_string">Category Page</string>
    <string name="categoryIcon">Category Icon</string>
    <string name="UpdateCategoryButton">Update Category</string>
    <string name="CreateCategoryButton">Create Category</string>
    <string name="category_page2_string">Create Category</string>
    <string name="category_create_name">Name</string>
    <string name="category_create_description">Description</string>
    <string name="category_create_icon">Upload</string>
    <string name="category_create_button">Create Category</string>
    <string name="manage_org_string">Manage Organisation</string>
    <string name="orgIcon">Org Icon</string>
    <string name="ViewOrgButton">View Organisation</string>
    <string name="UpdateOrgButton">Update Organisation</string>
    <string name="ApproveOrgButton">Approve Organisation</string>
    <string name="update_organisation_page_string">Update Admin</string>
    <string name="orgUpdateOrgName">Organisation Name</string>
    <string name="orgUpdateEmail">EmailAddress</string>
    <string name="orgUpdatePassword">Full Name</string>
    <string name="orgUpdatePhoneNo">Date Of Birth</string>
    <string name="orgUpdatePIC">Phone Number</string>
    <string name="orgUpdateUserButton">Update</string>
    <string name="organisationview_string">View Organisation</string>
    <string name="organisation_name_string">Organisation:</string>
    <string name="organisation_incharge_string">In Charge:</string>
    <string name="organisation_phoneNo">Phone No:</string>
    <string name="view_org_name">name</string>
    <string name="view_in_charge_name">in charge</string>
    <string name="view_org_phoneno">phone no</string>
    <string name="approve_org_string">Approve Organisation</string>
    <string name="status_string">Status:</string>
    <string name="notapproved_string">Not Approved</string>
    <string name="approveOrgName">Organisation</string>
    <string name="email_string">Email Address:</string>
    <string name="contact_string">Contact Number:</string>
    <string name="contactname_string">Contact Name:</string>
    <string name="address_string">Org Address:</string>
    <string name="orgname_string">Organisation:</string>
    <string name="approvebutton_string">Approve</string>
    <string name="GoalSearch">Search</string>
    <string name="date_started">Date Started:</string>
    <string name="date_ended">Date Ended:</string>
    <string name="des_of_goal">Description</string>
    <string name="goal_progression">Progression</string>
    <string name="goal_status">Accomplished</string>
    <string name="get_help_string">Get Help</string>
    <string name="existing_help">Show Existing Help</string>
    <string name="get_help">Get Help from Organisations</string>
    <string name="pending_help">Show Pending Help</string>
    <string name="select_help_goal_string">Current Goals</string>
    <string name="select_instructions">Choose the goal that you need help with.</string>
    <string name="selected_goal_help">Selected Goal</string>
    <string name="confirm_goal_help">Get Help</string>
    <string name="pending_help_2">Pending Help</string>
    <string name="patience_text">Please be patient while they get back to you!</string>
    <string name="view_requested_help">Requested Help from Users</string>
    <string name="currently_helping_users">Currently Helping</string>
    <string name="add_services">Add Services</string>
    <string name="existing_help_2">Existing Help</string>
    <string name="existinghelp_text">Contact them whenever needed.</string>
    <string name="service_type">Service Type</string>
    <string name="add_selected_button">Add Selected Service</string>
    <string name="choose_service">Select a Service.</string>
    <string name="edit_org_details">Edit Details</string>
    <string name="organisation_name">Organisation Name:</string>
    <string name="org_email_address">Email Address:</string>
    <string name="org_password">Password:</string>
    <string name="org_phone_no">Phone Number:</string>
    <string name="org_PIC">Person-In-Charge:</string>
    <string name="org_address">Address:</string>
    <string name="org_update_detail_button">Update</string>
</resources>