<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.MainAdminPage"
    android:background="@drawable/adminpage_background">

  <TextView
      android:id="@+id/textView5"
      android:layout_width="217dp"
      android:layout_height="56dp"
      android:fontFamily="@font/poppins"
      android:gravity="center"
      android:text="@string/admin_page_string"
      android:textColor="@color/black"
      android:textSize="30sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.101" />

  <ImageView
      android:id="@+id/adminLogOut"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/logout"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.934"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.057"
      app:srcCompat="@drawable/logout" />

  <TextView
      android:id="@+id/AdminName"
      android:layout_width="215dp"
      android:layout_height="45dp"
      android:layout_marginTop="40dp"
      android:text="@string/admin_name"
      android:textColor="@color/black"
      android:textSize="20sp"
      android:textStyle="bold"
      android:fontFamily="@font/poppins"
      android:gravity="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView5" />

  <ImageView
      android:id="@+id/manageGoalCatButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/editGoalCat"
      app:layout_constraintBottom_toTopOf="@+id/manageAdminButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.525"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/AdminName"
      app:srcCompat="@drawable/adminpage_goalcategory" />

  <ImageView
      android:id="@+id/manageAdminButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/ManageAdmin"
      app:layout_constraintBottom_toTopOf="@+id/ViewUsersButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.491"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/manageGoalCatButton"
      app:srcCompat="@drawable/adminpage_manageadmin" />

  <ImageView
      android:id="@+id/ViewUsersButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/ViewUsers"
      app:layout_constraintBottom_toTopOf="@+id/ApproveOrgButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.49"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/manageAdminButton"
      app:srcCompat="@drawable/adminpage_viewusersgoal" />

  <ImageView
      android:id="@+id/ApproveOrgButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/ApproveOrgs"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/ViewUsersButton"
      app:srcCompat="@drawable/adminpage_approveorg" />
</androidx.constraintlayout.widget.ConstraintLayout>