<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Goals.ChoosingGoal"
    android:background="@drawable/setting_goals">

    <ImageView
        android:id="@+id/arrowBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/returnPrev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045"
        app:srcCompat="@drawable/arrow" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="274dp"
        android:layout_height="141dp"
        android:fontFamily="@font/poppins"
        android:text="@string/description_string"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropdownBox"
        app:layout_constraintVertical_bias="0.162" />

    <TextView
        android:id="@+id/instructions_string"
        android:layout_width="189dp"
        android:layout_height="86dp"
        android:fontFamily="@font/poppins"
        android:text="@string/chooseGoal_string"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

    <Spinner
        android:id="@+id/dropdownBox"
        android:layout_width="138dp"
        android:layout_height="41dp"
        android:contentDescription="@string/dropDownBox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663" />

    <ImageView
        android:id="@+id/imageIcon"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:contentDescription="@string/imageIcon"
        app:layout_constraintBottom_toTopOf="@+id/dropdownBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872"
        app:srcCompat="@drawable/exercise" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="84dp"
        android:layout_height="28dp"
        android:layout_marginBottom="8dp"
        android:text="@string/step_1"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        android:textSize="18sp"
        android:textColor="@color/opacity"
        app:layout_constraintBottom_toTopOf="@+id/instructions_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/nextB"
        android:layout_width="122dp"
        android:layout_height="34dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/nextButton"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc"
        app:layout_constraintVertical_bias="0.175" />
</androidx.constraintlayout.widget.ConstraintLayout>